# dig-wallet

./: .gitignore  CHANGELOG.md  Cargo.toml  FINAL_RELEASE_INSTRUCTIONS.md  IMPLEMENTATION_ANALYSIS.md  LICENSE  PUBLISHING.md  README.md  RELEASE_STATUS.md  TEST_COVERAGE.md  WORKFLOW_STATUS.md
.github/workflows/: ci.yml  publish.yml
examples/: wallet_usage.rs
scripts/: prepare-release.bat  prepare-release.sh
src/: error.rs  file_cache.rs  lib.rs  wallet.rs
tests/: integration_tests.rs  public_api_test.rs
